--- a/node/package.json
+++ b/node/package.json
@@ -8,5 +8,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "axios": "^1.12.2",
+    "fs": "^0.0.1-security",
+    "process": "^0.11.10"
+  }
 }
